# ddd-project

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: Dockerfile  requirements.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/: settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/alembic/: env.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/alembic/versions/: b205e2fc63c9_add_users.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/application/adapters/: database.py  orm.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/application/adapters/repositories/: users.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/application/domain/: model.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/application/entrypoints/: main.py  users.py
