[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author}} {{cookiecutter.email}}"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
httpx = "^0.23.0"
SQLAlchemy = "^1.4.37"
asyncpg = "^0.25.0"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
